2004-02-17  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.initialize): Don't inflate
	all the members here; we only do this for members of the current
	class and only when they're actually queried for.

2004-02-12  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoInflatedField): Removed.

	* MonoGenericInst.cs (MonoInflatedMethod, MonoInflatedCtor): Removed.

2004-02-08  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.inflate): Pass recursive
	invocations the `reflected' type as `reflected', not `this'.
	(MonoInflatedMethod, MonoInflatedCtor): Reflect latest runtime changes.

2004-02-08  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.GetParentType): New interncall.
	(MonoGenericInst.GetInterfaces_internal): New interncall.
	(MonoGenericInst): Reflect latest API changes; use GetParentType()
	and GetInterfaces_internal() instead of the fields.	

2004-02-06  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.DeclaringType): Override this.

2004-02-03  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst.GetInterfaces): Override this.

2004-01-25  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs: Honor BindingFlags.DeclaredOnly.

2004-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs (GetManifestResourceStream): Make the IntPtrStream keep
	a reference on the Module object which contains the resource.

	* Module.cs: Decrease the image reference count when the Module is
	garbage collected.

2004-01-16  Martin Baulig  <martin@ximian.com>

	* Assembly.cs: Make the `MonoDebugger_' methods static.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoProperty.cs: changed get_property_info so that it only gets the
	values needed. Reduces the allocations needed.

2004-01-15  Martin Baulig  <martin@ximian.com>

	* Assembly.cs: Make the `MonoDebugger_' methods internal.
